feat: models, .gitignore

--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -1,5 +1,6 @@
 {% extends 'account/base.html' %} {% block content %}
 
 {% include "account/nav.html" %}
+<p>{{ title }} {{user}}</p>
 <p>Home o~o</p>
 {% endblock %}
