--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,7 +1,11 @@
 {% extends 'account/base.html' %} {% block content %}
+
 <form method="post" action="{% url 'login' %}">
   {% csrf_token %} {{form.as_p}}
 
   <input type="submit" value="login" />
 </form>
+<a href="{% url 'signup' %}">
+  <input type="button" value="Signup"/>
+</a>
 {% endblock %}
